--- a/requirements.txt
+++ b/requirements.txt
@@ -31,7 +31,8 @@ elevenlabs>=1.0.0
 fastapi>=0.100.0
 uvicorn>=0.23.0
 python-multipart>=0.0.9
-jinja2
+jinja2>=3.1.2
+
 
 # Pydantic v2 is 3.9 compatible, but we cap it to ensure stability
 pydantic>=2.0.0,<2.10.0
